--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
                     <a class="wheat" href="./ip/ron.php">Ronald</a>
                 </h1>
                 <h1>
+			<a class="wheat" href="./useragent/ua-fun-test.php">Rate Me</a>
+</h1>
+		<h1>
                     <a class="wheat" href="./TedNet/">TedNet</a>
                 </h1>
                 <h1>
