set index and made back purple

--- a/index-old.html
+++ b/index-old.html
@@ -126,91 +126,4 @@
                 </svg>
             </div>
         </div>
-
-</div>
-
-<style>
-
-#serverInfoBox {
-            position: fixed;
-            bottom: 10px;
-            right: 10px;
-            background-color: #f0f0f0;
-            padding: 0px;
-            border-radius: 5px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-align-items:center;   
-font-family: monospace;
-     
-}
-
-        #server-info {
-            display: flex;
-            margin: 0;
-            font-size: regular;
-            color: #333;
-align-items: center;
-background-color: #ededed;
-        }
-
-        .head, .data {
-            margin: 2px;
-        }
-
-        .head {
-            margin-left: 10px;
-            font-weight: bold;
-	color: blue;        
-}
-
-.data {
-
-}
-
-
-    </style>
-
-<div id="serverInfoBox">
-<div id="server-info">
-    <!-- Placeholder content, will be replaced by JavaScript -->
-    <p>Loading server information...</p>
-</div>
-</div>
-
-
-
-<script>
-function fetchServerInfo() {
-    fetch('cpu/server_info.php')
-        .then(response => response.json())
-        .then(data => {
-            // Log the entire JSON data to the console
-            console.log(data);
-
-            // Display specific information in your HTML
-            if (data.cpuUsage !== undefined) {
-                document.getElementById('server-info').innerHTML = `
-                    <p class="head">CPU</p>
-<p class="data">${data.cpuUsage.toFixed(1)}%<p>
-                    <p class="head">Memory</p>
-<p class="data">${data.memoryGB} GB</p>
-                `;
-            } else {
-                console.error('Error: CPU information is undefined.');
-            }
-        })
-        .catch(error => {
-            console.error('Error fetching server information:', error.message);
-        });
-}
-
-// Fetch server information on page load
-document.addEventListener('DOMContentLoaded', fetchServerInfo);
-
-// Fetch server information periodically (every 5 seconds in this example)
-setInterval(fetchServerInfo, 5000);
-</script>
-
-
-
-</body></html>
+</div></body></html>
