--- a/cpu/x.html
+++ b/cpu/x.html
@@ -9,7 +9,6 @@
             fetch('server_info.php')
                 .then(response => response.json())
                 .then(data => {
-                    // Update HTML content
                     document.getElementById('cpuUsage').textContent = `CPU Usage: ${data.cpuUsage.toFixed(1)}%`;
                     document.getElementById('memoryGB').textContent = `Memory Usage (GB): ${data.memoryGB}`;
                 })
@@ -18,10 +17,9 @@
                 });
         }
 
-        // Fetch server information initially and set interval for automatic updates
         document.addEventListener('DOMContentLoaded', () => {
             fetchServerInfo();
-            setInterval(fetchServerInfo, 5000); // Update every 5 seconds
+            setInterval(fetchServerInfo, 5000); 
         });
     </script>
 </head>
