new file:   cold/basic.css 	new file:   cold/basic.html 	new file:   cold/basic.js 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
                 <a class="wheat" href="./partridge/part.html">Get Lucky</a>
             </h1>
             <h1>
+                <a class="wheat" href="./cold/basic.html">Sick?</a>
+            </h1>
+            <h1>
                 <a class="wheat" href="./TedNet/">TedNet</a>
             </h1>
             <h1>
