--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
                 <a class="wheat" href="./wormhole">Wormhole</a>
             </h1>
             <h1>
+                <a class="wheat" href="./port/portfolio.html">Portfolio</a>
+            </h1>
+            <h1>
                 <a class="wheat" href="https://github.com/gabriel-wolf/public_html">Repo</a>
             </h1>
         
