--- a/port/portfolio.html
+++ b/port/portfolio.html
@@ -418,7 +418,7 @@ if ($os === 'Linux') {
       You can see the rest of the code here: <a class="regular-link" href="../pswd/">Password</a>.
     </p>
 
-    <h3 class="filename">info.html</h3>
+    <h3 class="filename">password.html</h3>
         <pre class="pre-code"><code class="language-js">
 function checkPassword() {
   const password = document.getElementById('password').value;
