--- a/partridge/part.html
+++ b/partridge/part.html
@@ -21,7 +21,7 @@
 <body>
 
 <video id="reversibleVideo" loop>
-    <source src="http://www.partridgegetslucky.com/vid/partridgeGetsLucky.mp4" type="video/mp4">
+    <source src="partridgeGetsLucky.mp4" type="video/mp4">
     Your browser does not support the video tag.
 </video>
 
